--- a/assets/index.css
+++ b/assets/index.css
@@ -1,3 +1,9 @@
 div[style*="background: black"] .Select-menu-outer * {
     color: black;
 }
+
+#selections{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 4px;
+}
